[tool.poetry]
name = "neurallelf"
version = "0.0.0"
description = "A package for load flow and load estimation on electric power grid data."
authors = ["Sarah Reisenbauer <sarah.reisenbauer@ait.ac.at>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.8.0"
numpy = "^1.22.3"
pandas = "^1.4.1"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.1"
joblib = "^1.1.0"
keras = "^2.9.0"
networkx = "^2.8.4"
ipympl = "^0.9.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
